@@ -345,7 +345,7 @@ table.tableinfo tr.header td.hover_grey {
 table.tableinfo tr.vertical_header td {
 	padding: 5px 0 5px 0px; margin: 0; white-space: nowrap; word-spacing: 0; font-weight: bold; width: 20px; text-align: center;
 }
-table.tableinfo tr.vertical_header td.left { text-align: left; }
+table.tableinfo tr.vertical_header td.left { padding-left: 5px; text-align: left; }
 table.tableinfo tr.vertical_header td.hover_grey:hover { cursor: pointer; }
 table.tableinfo tr.vertical_header td.vertical_rotation {
 	white-space: nowrap; align: center; font-family: arial; font-size: 11px;
